manifests/workloads/gaming/minecraft/public/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minecraft-public
  name: minecraft-public
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: minecraft-public
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minecraft-public
    spec:
      containers:
      - env:
        - name: EULA
          value: "TRUE"
        - name: VERSION
          value: "LATEST"
        image: itzg/minecraft-bedrock-server:latest@sha256:37b69ebe2736024ddb4d2535511043b6b168372ac07fba42567e8ed54795d24b
        imagePullPolicy: Always
        name: minecraft-public
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: minecraft-public
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: minecraft-public
        persistentVolumeClaim:
          claimName: minecraft-public
